# osp2023-A1-startup

./: CMakeLists.txt
a1-startup/: Makefile
a1-startup/copier_files/: Makefile  copier  main.cpp  reader.cpp  writer.cpp
a1-startup/mtcopier_files/: .reader.h.swp  Makefile  global_data.cpp  global_data.h  main.cpp  mtcopier  reader.cpp  reader.h  writer.cpp  writer.h
